failed attempt, trying again Friday

--- a/views/shop.html
+++ b/views/shop.html
@@ -5,7 +5,25 @@
 </section>
 <div class="product-grid__item   grid__item one-half large--one-third" >
 
-    <!--Repeat over your data and display it below -->
+  <div ng-repeat="c in clothes">
+    <!--Product Image click collapse the image-->
+    <a class="product-grid__product" >
+        <img class="product-grid__img" src="{{c.image}}"  sizes="(min-width: 960px) 33vw, (min-width: 769px) 50vw, 100vw" alt="">
+    </a>
+    <a class="product-grid__product">
+        show image
+    </a>
 
-    
+    <!--Product Meta-->
+    <div class="product-grid__meta">
+        <!--Title click Should redirect to the product-details section. remember to pass along the product id so you can make an api call
+    to get the specific product details-->
+        <h3 class="product-grid__name"><a ui-sref="product-details({id: c.id})">{{c.title}}</a></h3>
+
+        <h4 class="product-grid__sub">{{c.desc}}</h4>
+
+        <div class="product-grid__price">{{c.price}}</div>
+    </div>
+  </div>
+
 </div>
